# brainasium

./: .gitignore  Makefile.am  TODO  configure.ac
abacus/: Makefile.am  abacus.c  argparse.h
dow/: Makefile.am  argparse.h  dow.c
flashcards/: Makefile.am  argparse.h  flashcards.c
quizzer/: Makefile.am  argparse.h  quizzer.c
sample-exercise/: Makefile.am  sample-exercise.c
sample-game/: Makefile.am  game.c  sample-game.c
src/: Makefile.am  argparse.h  exercise.c  exercise.h  game.c  game.h  main.c  registry.c  registry.h
test/: Makefile.am
